MangaLib fixed z-index + improved getting manga info

--- a/src/pages/MangaLib/style.less
+++ b/src/pages/MangaLib/style.less
@@ -26,3 +26,7 @@
   outline: solid 2px #79a3c3 !important;
   outline-offset: -2px;
 }
+// Fix for current page div on the website being always above MalSync overlay
+#flashinfo-div {
+  z-index: 21 !important;
+}
